--- a/darknet_ros/darknet_ros/package.xml
+++ b/darknet_ros/darknet_ros/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>darknet_ros</name>
+  <name>eb_darknet</name>
   <version>1.1.4</version>
   <description>Darknet is an open source neural network framework that runs on CPU and GPU. You only look once (YOLO) is a state-of-the-art, real-time object detection system.</description>
   <maintainer email="marko.bjelonic@mavt.ethz.ch">Marko Bjelonic</maintainer>
